cg multitranscript fix: title help

--- a/lib/cg_multitranscript.wiki
+++ b/lib/cg_multitranscript.wiki
@@ -1,4 +1,4 @@
-= Multicompar =
+= Multitranscript =
 
 == Format ==
 cg multitranscript ?options? multitranscriptfile transcriptfile transcriptfile ?transcriptfile? ...
