--- a/lib/cg_multitranscript.wiki
+++ b/lib/cg_multitranscript.wiki
@@ -42,6 +42,7 @@ sizes)
 **pattern** approximate matching will be used. (overruling the value in
 category, though this will still be used to see which name will be given
 to the result; known preferred)
+; -skipempty 0/1: skip isoform files which are empty (size = 0) (default 1)
 
 == Category ==
 RNA
