--- a/lib/cg_multigene.wiki
+++ b/lib/cg_multigene.wiki
@@ -11,7 +11,7 @@ This command combines multiple gene files into one multigene file; a tab
 separated file containing a wide table used to compare gene (counts)
 between different samples. Each line in the table contains general gene
 info (chromosome, begin, end, strand, ?gene?, ?geneid?) and columns with
-transcript info specific to each sample (count, etc.). The latter have a
+gene info specific to each sample (count, etc.). The latter have a
 column heading of the form field-<sample>.
 
 <sample> can be simply the samplename, but may also include information
@@ -27,7 +27,6 @@ genes will be matched if they overlap.  The resulting gene will have the
 lowest start and highest end position of these matches. The id of these
 result genes will be changed to one unique for that gene and consistent
 over different experiments (based on location and strand)
-
 
 == Arguments ==
 ; multigenefile: resultfile, will be created if it does not exist
