--- a/lib/cg_process_sample.wiki
+++ b/lib/cg_process_sample.wiki
@@ -68,8 +68,8 @@ analysis (see further) using the amplicons defained in **ampliconfile**
 Currently supported are: gatk, gatkh (haplotype caller), strelka, sam, freebayes, bcf, longshot, clair3, 
 ; -svcallers svcallers: (space separated) list of structural variant callers to be used (default empty).
 Currently supported are: manta, lumpy, gridds sniffles, cuteSV, npinv
-; -methcallers svcallers: (space separated) list of methylation callers to be used (default empty).
-Currently supported are: nanopolish
+; -methcallers methcallers: (space separated) list of methylation callers to be used (default empty).
+Currently supported are: nanopolish remora (actual remora analysis must have been done before, with methylation data present in the source unaligned bams)
 ; -counters counters: (space separated) list of counter programs to be used for rna-seq data.
 Currently supported are: rnaseqc, qorts
 ; -split 1/0 (-s): split multiple alternative genotypes over different line
@@ -166,6 +166,13 @@ If the experiment used e.g. exome capture, this can be indicated by the
 presence of a file named reg_targets.tsv (or matching reg_*_targets*.tsv)
 in the sampledir (or the option -targetfile). If present, coverage
 statistics will be calculated for this region.
+
+For ONT genome/targeted sequencing analysis a similar steps are performed,
+but you select other programs and settings, e.g. minimap2 for alignment,
+clair3 for (small) variant calling. It can start from fastq files in
+the fastq directory, but can also use unaligned bam files (in a direcory
+named ubam). You would typically use ubams to include methylation calling
+data produced by remora/dorado at the basecalling step.
 
 === Amplicon sequencing ===
 Amplicon sequencing samples are indicated by the presence of a file named
