--- a/lib/cg_process_project.wiki
+++ b/lib/cg_process_project.wiki
@@ -77,6 +77,8 @@ not processed and not added to the final compar.
 ; -removeskew num: -k parameter for sequence clipping using fastq-mcf: sKew percentage-less-than causing cycle removal
 ; -aligner aligner (-a): use the given aligner for mapping to the reference genome (default bwa)
 Currently supported are: bwa, bowtie2, minimap2_sr, minimap2, minimap2_pb, minimap2_asm20, ngmlr ; for rna-seq: star, star_2p, hisat2, minimap2_splice, minimap2_splicehq
+; -ali_keepcomments 1/0: set to 1 to transfer sequence comments in the source fastq or ubams to the alignment (default don't keep for fastq, keep for ubams). 
+This option currently only works for minimap2 aligner
 ; -aliformat format: format of the (final) alignment (map) files, this is by default bam, but can be set to cram
 ; -realign value: If **value** is 0, realignment will not be performed, 
 use 1 for (default) realignment with gatk, or **value** srma for alignment with srma
