--- a/lib/cg_process_sample.wiki
+++ b/lib/cg_process_sample.wiki
@@ -54,6 +54,8 @@ the sample is not processed.
 ; -removeskew num: -k parameter for sequence clipping using fastq-mcf: sKew percentage-less-than causing cycle removal
 ; -aligner aligner (-a): use the given aligner for mapping to the reference genome (default bwa)
 Currently supported are: bwa, bowtie2, minimap2_sr, minimap2, ngmlr ; for rna-seq: star, star_2p, hisat2, minimap2_splice
+; -ali_keepcomments 1/0: set to 1 to transfer sequence comments in the source fastq or ubams to the alignment (default don't keep for fastq, keep for ubams). 
+This option currently only works for minimap2 aligner
 ; -aliformat format: format of the (final) alignment (map) file, this is by default bam, but can be set to cram
 ; -realign value: If **value** is 0, realignment will not be performed, 
 use 1 for (default) realignment with gatk, or **value** srma for alignment with srma
