--- a/lib/cg_process_project.wiki
+++ b/lib/cg_process_project.wiki
@@ -108,6 +108,8 @@ Currently supported are: nanopolish
 Currently supported are: flair, isoquant, flames
 ; -isocallers isocallers: (space separated) list of isofrom calling (and counting) programs to be used for rna-seq data.
 Currently supported are: flair, isoquant, flames
+; -organelles organelles: (space separated) list of chromosomes that are organelles (that are treated differently in some analysis)
+If not given explicitely, the ones indicated in the file $refdb/extra/reg_*_organelles.tsv (if present) will be used
 ; -counters counters: (space separated) list of counter programs to be used for rna-seq data.
 Currently supported are: rnaseqc, qorts
 ; -split 1/0: split multiple alternative genotypes over different line
